<resources>
    <string name="app_name">SerrAlertas</string>
    <string name="mis_botones">Mis botones</string>
    <string name="otras">Otras configuraciones</string>
    <string name="titulo">SerrAlerta</string>
    <string name="numero">Número</string>
    <string name="crear_boton">Crear botón</string>
    <string name="seleccion_boton">Selecciona un botón</string>
    <string name="seleccion_audio">Audio de alerta</string>
    <string name="seleccion_color_alerta">Color de fondo</string>
    <string name="btn_seleccion_audio">Seleccionar audio</string>
    <string name="btn_seleccion_color">Elegir color</string>
    <string name="selecciona_picto">Pictograma de alerta</string>
    <string name="selecciona_pictograma">Selecciona un pictograma</string>
    <string name="texto_alerta">Texto de alerta</string>
    <string name="lblSpinnerBotones">Selecciona un botón para asignar la alerta</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="mirarinfo">Ver info</string>
    <string name="descripccion_fab_add_boton">Añadir nuevo botón</string>
    <string name="fondo">Fondo</string>
    <string name="eliminar_boton">Eliminar Botón</string>
    <string name="toca_imagen_para_seleccionar">Toca una imagen para seleccionarla</string>
    <string name="btn_ver_botones">Ver botones</string>
    <string name="btn_cerrar_alerta">Cerrar</string>
<<<<<<< HEAD
    <string name="ayuda_crear_editar_borrar">COMO CREAR/EDITAR/ELIMINAR BOTONES</string>
    <string name="ayuda_activar_desactivar">COMO ACTIVAR/DESACTIVAR BOTONES</string>
    <string name="ayuda_mostrarAlertas">MOSTRAR ALERTAS</string>
    <string name="ayuda_otrasConfiguraciones">USO DE OTRAS CONFIGURACIONES</string>
=======
    <string name="conectar_bluetooth">Conectar bluetooth</string>
    <string name="instrucciones_bt">Seleccione un dispositivo del desplegable para ver su nombre. Si no ecuentra el dispositivo deseado deberá enlazarlo en los ajustes del sistema</string>
    <string name="configurar_notificacones">Configurar notificaciones</string>
>>>>>>> 90a7da44c5e4a8c857117ba01de368ef201258b3
</resources>