<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarCrearBoton">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSelecBoton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seleccion_boton"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerBotones"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/lblSpinnerBotones" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTextoAlerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/texto_alerta"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextoAlerta"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="Alerta" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeleccionAudio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seleccion_audio"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombreTono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView" />

        <Button
            android:id="@+id/btnSeleccionAudio"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#A9B5E3"
            android:text="@string/btn_seleccion_audio"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:strokeColor="#6376BF"
            app:strokeWidth="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvColorFondo"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:text="@string/seleccion_color_alerta"
            android:textStyle="bold" />

        <View
            android:id="@+id/vistaPreviaColor"
            android:layout_width="21dp"
            android:layout_height="57dp"
            android:layout_margin="8dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSeleccionColor"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#D8ABE3"
            android:text="@string/btn_seleccion_color"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:strokeColor="#B46AC5"
            app:strokeWidth="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeleccionPicto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/selecciona_picto"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/vistaPreviaPicto"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnSeleccionPicto"
            android:layout_width="207dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#ECB87F"
            android:gravity="center"
            android:text="@string/selecciona_pictograma"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:strokeColor="#EA8A22"
            app:strokeWidth="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#E8A2E1"
            android:text="@string/cancelar"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:strokeColor="#EF1DDA"
            app:strokeWidth="4dp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#ECEF9D"
            android:text="@string/guardar"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:strokeColor="#E9EF2F"
            app:strokeWidth="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E88EA0"
        android:text="@string/eliminar_boton"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:strokeColor="#EF1D47"
        app:strokeWidth="4dp" />

</LinearLayout>