<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ViewFlipper
        android:id="@+id/v_flipper"
        android:layout_width="match_parent"
        android:layout_height="750dp">


    </ViewFlipper>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textSize="60dp"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="473dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="183dp"
        android:backgroundTint="#D4F8F2"
        android:text="@string/mis_botones"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:strokeColor="#78EFDD"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="195dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="183dp"
        android:backgroundTint="#E2C8ED"
        android:text="@string/otras"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:strokeColor="#C268E8"
        app:strokeWidth="4dp" />

    <ImageView
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="Ayuda"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="43dp"
        app:srcCompat="@drawable/interrogante" />

</RelativeLayout>